[package]
name = "gm_maxminddb_geoip"
authors = ["William Venner <william@venner.io>"]
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"

[dependencies]
gmod = { version = "11.1.1", default-features = false }
maxminddb = { version = "0.28", default-features = false, features = ["mmap"] }
thiserror = "1.0.30"